--- a/Labbar/Labb2.ipynb
+++ b/Labbar/Labb2.ipynb
@@ -5320,7 +5320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -5506,6 +5506,7 @@
           "yref": "paper"
          }
         ],
+        "showlegend": true,
         "template": {
          "data": {
           "bar": [
@@ -6366,8 +6367,8 @@
     "# Lägg till diagrammet till figuren\n",
     "    fig2.add_trace(go.Pie(labels=category_sum[\"Kategori\"], values=category_sum[\"Kostnad per elev\"], name=huvudman), row=1, col=index)\n",
     "\n",
-    "# Uppdatera layouten med titel\n",
-    "fig2.update_layout(title_text=\"Kostnadsfördelning per elevkategori per huvudman\")\n",
+    "# Uppdatera layouten med titel och legend.\n",
+    "fig2.update_layout(title_text=\"Kostnadsfördelning per elevkategori per huvudman\", showlegend=True)\n",
     "\n",
     "\n",
     "fig2.show()\n"
