added function to change margins. tighter layout for the huvudman titles

--- a/Labbar/Labb2.ipynb
+++ b/Labbar/Labb2.ipynb
@@ -5320,7 +5320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -5506,6 +5506,12 @@
           "yref": "paper"
          }
         ],
+        "margin": {
+         "b": 100,
+         "l": 20,
+         "r": 20,
+         "t": 200
+        },
         "showlegend": true,
         "template": {
          "data": {
@@ -6368,7 +6374,9 @@
     "    fig2.add_trace(go.Pie(labels=category_sum[\"Kategori\"], values=category_sum[\"Kostnad per elev\"], name=huvudman), row=1, col=index)\n",
     "\n",
     "# Uppdatera layouten med titel och legend.\n",
-    "fig2.update_layout(title_text=\"Kostnadsfördelning per elevkategori per huvudman\", showlegend=True)\n",
+    "fig2.update_layout(title_text=\"Kostnadsfördelning per elevkategori per huvudman\", showlegend=True,\n",
+    "                   margin=dict(t=200, l=20, r=20, b=100))  # Justerade marginaler\n",
+    "\n",
     "\n",
     "\n",
     "fig2.show()\n"
