--- a/Labbar/Labb2.ipynb
+++ b/Labbar/Labb2.ipynb
@@ -7386,6 +7386,20 @@
     "\n",
     "fig3.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Sammanfattning av Analysen\n",
+    "\n",
+    "Denna analys har tillhandahållit en detaljerad översikt av de genomsnittliga kostnaderna per elev för olika huvudmän inom svenskt gymnasieskoleväsende under 2022, med en fördjupning i kostnadsfördelningen per elevkategori. Vi har observerat hur olika huvudmän allokerar sina resurser och hur en betydande del av investeringarna går till läromedel och utrustning."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
