added graphs in a seperate folder

--- a/Labbar/Labb2.ipynb
+++ b/Labbar/Labb2.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -148,7 +148,7 @@
        "3            14.2  "
       ]
      },
-     "execution_count": 41,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -253,7 +253,9 @@
     "plt.title('Totala poängen per ämne')\n",
     "plt.xlabel('Ämnen')\n",
     "plt.ylabel('Poäng')\n",
-    "plt.show()"
+    "plt.savefig(\"Labb2_visualiseringar/upg_c.png\")\n",
+    "plt.show()\n",
+    "\n"
    ]
   },
   {
@@ -265,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -305,6 +307,7 @@
     "        axs[i].set_ylabel(\"Totalt (poäng)\")\n",
     "\n",
     "plt.tight_layout()\n",
+    "plt.savefig(\"Labb2_visualiseringar/upg_d.png\")\n",
     "plt.show()\n",
     "\n"
    ]
@@ -328,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1331,7 +1334,7 @@
     "\n",
     "# Tar bort onödigt mellanrum mellan heltalsåren och utökar x-axelns intervall\n",
     "fig.update_xaxes(dtick=1,range=[2018,2023])\n",
-    "\n",
+    "fig.write_html(\"Labb2_visualiseringar/upg1_a.html\")\n",
     "fig.show()\n"
    ]
   },
@@ -1344,7 +1347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -2332,7 +2335,7 @@
     "\n",
     "# Sätter axelns intervall från 2018 till 2023 för att inkludera hela dataserien\n",
     "fig.update_xaxes(dtick=1, range=[2018,2023])\n",
-    "\n",
+    "fig.write_html(\"Labb2_visualiseringar/upg1_b.html\")\n",
     "fig.show()"
    ]
   },
@@ -2346,7 +2349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -3330,6 +3333,7 @@
     "fig_merit.update_yaxes(title_text='Meritvärde', range=[0, 300], row=1, col=1)\n",
     "fig_merit.update_yaxes(range=[0, 300], row=1, col=2)\n",
     "fig_merit.update_yaxes(range=[0, 300], row=1, col=3)\n",
+    "fig.write_html(\"Labb2_visualiseringar/upg1_c.html\")\n",
     "fig.show()\n",
     "\n",
     "\n",
@@ -3340,7 +3344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -4336,6 +4340,7 @@
     "fig_saknat_betyg.update_yaxes(title_text='Andel saknat betyg (%)', range=[0, 100], row=1, col=1)\n",
     "fig_saknat_betyg.update_yaxes(range=[0, 100], row=1, col=2)\n",
     "fig_saknat_betyg.update_yaxes(range=[0, 100], row=1, col=3)\n",
+    "fig_saknat_betyg.write_html(\"Labb2_visualiseringar/upg1_c1.html\")\n",
     "fig_saknat_betyg.show()\n",
     "\n"
    ]
@@ -4368,7 +4373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4406,7 +4411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -5305,7 +5310,7 @@
     "fig1 = px.line(unique_huvudman, x=\"Typ av huvudman\", y=\"Totalt per elev\", markers=True,\n",
     "               title=\"Genomsnittlig kostnad per elev per huvudman\",\n",
     "               labels={\"Totalt per elev\": \"Genomsnittlig kostnad per elev (SEK)\", \"Typ av huvudman\": \"Huvudman\"})\n",
-    "\n",
+    "fig1.write_html(\"Labb2_visualiseringar/upg2_first_graph.html\")\n",
     "fig1.show()\n"
    ]
   },
@@ -5320,7 +5325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -6378,7 +6383,7 @@
     "                   margin=dict(t=200, l=20, r=20, b=100))  # Justerade marginaler\n",
     "\n",
     "\n",
-    "\n",
+    "fig2.write_html(\"Labb2_visualiseringar/upg2_second_graph.html\")\n",
     "fig2.show()\n"
    ]
   },
@@ -6393,7 +6398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -7383,7 +7388,7 @@
     "    title=\"Andel av kostnader för läromedel och utrustning per huvudman\",\n",
     "    labels={\"Andel läromedel och utrustning (%)\": \"Andel (%)\", \"Typ av huvudman\": \"Huvudman\"}\n",
     ")\n",
-    "\n",
+    "fig3.write_html(\"Labb2_visualiseringar/upg2_third_graph.html\")\n",
     "fig3.show()"
    ]
   },
@@ -7395,11 +7400,6 @@
     "\n",
     "Denna analys har tillhandahållit en detaljerad översikt av de genomsnittliga kostnaderna per elev för olika huvudmän inom svenskt gymnasieskoleväsende under 2022, med en fördjupning i kostnadsfördelningen per elevkategori. Vi har observerat hur olika huvudmän allokerar sina resurser och hur en betydande del av investeringarna går till läromedel och utrustning."
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
