--- a/Labbar/Labb2.ipynb
+++ b/Labbar/Labb2.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -148,7 +148,7 @@
        "3            14.2  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -331,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -1275,6 +1275,7 @@
           2018,
           2023
          ],
+         "showgrid": false,
          "title": {
           "text": "Läsår"
          }
@@ -1285,6 +1286,7 @@
           0,
           1
          ],
+         "showgrid": false,
          "title": {
           "text": "Andel ej godkända (%)"
          }
@@ -1334,6 +1336,8 @@
     "\n",
     "# Tar bort onödigt mellanrum mellan heltalsåren och utökar x-axelns intervall\n",
     "fig.update_xaxes(dtick=1,range=[2018,2023])\n",
+    "fig.update_xaxes(showgrid=False)\n",
+    "fig.update_yaxes(showgrid=False)\n",
     "fig.write_html(\"Labb2_visualiseringar/upg1_a.html\")\n",
     "fig.show()\n"
    ]
@@ -1347,7 +1351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -2291,6 +2295,7 @@
           2018,
           2023
          ],
+         "showgrid": false,
          "title": {
           "text": "Läsår"
          }
@@ -2301,6 +2306,7 @@
           0,
           1
          ],
+         "showgrid": false,
          "title": {
           "text": "Meritvärde"
          }
@@ -2335,6 +2341,8 @@
     "\n",
     "# Sätter axelns intervall från 2018 till 2023 för att inkludera hela dataserien\n",
     "fig.update_xaxes(dtick=1, range=[2018,2023])\n",
+    "fig.update_xaxes(showgrid=False)\n",
+    "fig.update_yaxes(showgrid=False)\n",
     "fig.write_html(\"Labb2_visualiseringar/upg1_b.html\")\n",
     "fig.show()"
    ]
@@ -2349,7 +2357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -3293,6 +3301,7 @@
           2018,
           2023
          ],
+         "showgrid": false,
          "title": {
           "text": "Läsår"
          }
@@ -3303,6 +3312,7 @@
           0,
           1
          ],
+         "showgrid": false,
          "title": {
           "text": "Meritvärde"
          }
@@ -3333,6 +3343,9 @@
     "fig_merit.update_yaxes(title_text='Meritvärde', range=[0, 300], row=1, col=1)\n",
     "fig_merit.update_yaxes(range=[0, 300], row=1, col=2)\n",
     "fig_merit.update_yaxes(range=[0, 300], row=1, col=3)\n",
+    "fig_merit.update_xaxes(showgrid=False)\n",
+    "fig_merit.update_yaxes(showgrid=False)\n",
+    "\n",
     "fig.write_html(\"Labb2_visualiseringar/upg1_c.html\")\n",
     "fig.show()\n",
     "\n",
@@ -3344,7 +3357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -4266,21 +4279,24 @@
          "domain": [
           0,
           0.2888888888888889
-         ]
+         ],
+         "showgrid": false
         },
         "xaxis2": {
          "anchor": "y2",
          "domain": [
           0.35555555555555557,
           0.6444444444444445
-         ]
+         ],
+         "showgrid": false
         },
         "xaxis3": {
          "anchor": "y3",
          "domain": [
           0.7111111111111111,
           1
-         ]
+         ],
+         "showgrid": false
         },
         "yaxis": {
          "anchor": "x",
@@ -4292,6 +4308,7 @@
           0,
           100
          ],
+         "showgrid": false,
          "title": {
           "text": "Andel saknat betyg (%)"
          }
@@ -4305,7 +4322,8 @@
          "range": [
           0,
           100
-         ]
+         ],
+         "showgrid": false
         },
         "yaxis3": {
          "anchor": "x3",
@@ -4316,7 +4334,8 @@
          "range": [
           0,
           100
-         ]
+         ],
+         "showgrid": false
         }
        }
       }
@@ -4340,6 +4359,8 @@
     "fig_saknat_betyg.update_yaxes(title_text='Andel saknat betyg (%)', range=[0, 100], row=1, col=1)\n",
     "fig_saknat_betyg.update_yaxes(range=[0, 100], row=1, col=2)\n",
     "fig_saknat_betyg.update_yaxes(range=[0, 100], row=1, col=3)\n",
+    "fig_saknat_betyg.update_xaxes(showgrid=False)\n",
+    "fig_saknat_betyg.update_yaxes(showgrid=False)\n",
     "fig_saknat_betyg.write_html(\"Labb2_visualiseringar/upg1_c1.html\")\n",
     "fig_saknat_betyg.show()\n",
     "\n"
@@ -4373,7 +4394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4411,7 +4432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -5281,6 +5302,7 @@
           0,
           1
          ],
+         "showgrid": false,
          "title": {
           "text": "Huvudman"
          }
@@ -5291,6 +5313,7 @@
           0,
           1
          ],
+         "showgrid": false,
          "title": {
           "text": "Genomsnittlig kostnad per elev (SEK)"
          }
@@ -5310,6 +5333,8 @@
     "fig1 = px.line(unique_huvudman, x=\"Typ av huvudman\", y=\"Totalt per elev\", markers=True,\n",
     "               title=\"Genomsnittlig kostnad per elev per huvudman\",\n",
     "               labels={\"Totalt per elev\": \"Genomsnittlig kostnad per elev (SEK)\", \"Typ av huvudman\": \"Huvudman\"})\n",
+    "fig1.update_xaxes(showgrid=False)\n",
+    "fig1.update_yaxes(showgrid=False)\n",
     "fig1.write_html(\"Labb2_visualiseringar/upg2_first_graph.html\")\n",
     "fig1.show()\n"
    ]
@@ -5325,7 +5350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -6398,7 +6423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -7349,6 +7374,7 @@
           0,
           1
          ],
+         "showgrid": false,
          "title": {
           "text": "Huvudman"
          }
@@ -7359,6 +7385,7 @@
           0,
           1
          ],
+         "showgrid": false,
          "title": {
           "text": "Andel (%)"
          }
@@ -7388,6 +7415,9 @@
     "    title=\"Andel av kostnader för läromedel och utrustning per huvudman\",\n",
     "    labels={\"Andel läromedel och utrustning (%)\": \"Andel (%)\", \"Typ av huvudman\": \"Huvudman\"}\n",
     ")\n",
+    "fig3.update_xaxes(showgrid=False)\n",
+    "fig3.update_yaxes(showgrid=False)\n",
+    "\n",
     "fig3.write_html(\"Labb2_visualiseringar/upg2_third_graph.html\")\n",
     "fig3.show()"
    ]
