Added tickfont color for better contrast

--- a/Labbar/Labb2.ipynb
+++ b/Labbar/Labb2.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -148,7 +148,7 @@
        "3            14.2  "
       ]
      },
-     "execution_count": 32,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -250,9 +250,9 @@
     "\n",
     "plt.figure(figsize=(9, 5))\n",
     "plt.bar(subjects, points, color=\"Lightgreen\")\n",
-    "plt.title('Totala poängen per ämne')\n",
-    "plt.xlabel('Ämnen')\n",
-    "plt.ylabel('Poäng')\n",
+    "plt.title(\"Totala poängen per ämne\")\n",
+    "plt.xlabel(\"Ämnen\")\n",
+    "plt.ylabel(\"Poäng\")\n",
     "plt.savefig(\"Labb2_visualiseringar/upg_c.png\")\n",
     "plt.show()\n",
     "\n"
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -331,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -1351,7 +1351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -2296,6 +2296,9 @@
           2023
          ],
          "showgrid": false,
+         "tickfont": {
+          "color": "#999"
+         },
          "title": {
           "text": "Läsår"
          }
@@ -2307,6 +2310,9 @@
           1
          ],
          "showgrid": false,
+         "tickfont": {
+          "color": "#999"
+         },
          "title": {
           "text": "Meritvärde"
          }
@@ -2343,6 +2349,8 @@
     "fig.update_xaxes(dtick=1, range=[2018,2023])\n",
     "fig.update_xaxes(showgrid=False)\n",
     "fig.update_yaxes(showgrid=False)\n",
+    "fig.update_xaxes(tickfont=dict(color=\"#999\"))\n",
+    "fig.update_yaxes(tickfont=dict(color=\"#999\"))\n",
     "fig.write_html(\"Labb2_visualiseringar/upg1_b.html\")\n",
     "fig.show()"
    ]
@@ -2357,7 +2365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -2368,109 +2376,96 @@
        },
        "data": [
         {
-         "hovertemplate": "Kategori=Totalt meritvärde 16 ämnen<br>Läsår=%{x}<br>Meritvärde=%{y}<extra></extra>",
-         "legendgroup": "Totalt meritvärde 16 ämnen",
-         "line": {
-          "color": "#636efa",
-          "dash": "solid"
-         },
-         "marker": {
-          "symbol": "circle"
-         },
-         "mode": "lines",
-         "name": "Totalt meritvärde 16 ämnen",
-         "orientation": "h",
-         "showlegend": true,
-         "type": "scatter",
+         "name": "Förgymnasial",
+         "type": "bar",
          "x": [
-          2018,
-          2019,
-          2020,
-          2021,
-          2022
+          "Totalt",
+          "Flickor",
+          "Pojkar"
          ],
          "xaxis": "x",
          "y": [
-          221.7,
-          222.9,
-          223.9,
-          221.2,
-          220.6
+          163.8,
+          172.2,
+          155.8
          ],
          "yaxis": "y"
         },
         {
-         "hovertemplate": "Kategori=Flickor meritvärde 16 ämnen<br>Läsår=%{x}<br>Meritvärde=%{y}<extra></extra>",
-         "legendgroup": "Flickor meritvärde 16 ämnen",
-         "line": {
-          "color": "#EF553B",
-          "dash": "solid"
-         },
-         "marker": {
-          "symbol": "circle"
-         },
-         "mode": "lines",
-         "name": "Flickor meritvärde 16 ämnen",
-         "orientation": "h",
-         "showlegend": true,
-         "type": "scatter",
+         "name": "Gymnasial",
+         "type": "bar",
          "x": [
-          2018,
-          2019,
-          2020,
-          2021,
-          2022
+          "Totalt",
+          "Flickor",
+          "Pojkar"
          ],
-         "xaxis": "x",
+         "xaxis": "x2",
          "y": [
-          234.3,
-          235.7,
-          235.4,
-          231.6,
-          229.7
+          197.4,
+          207.2,
+          188.2
          ],
-         "yaxis": "y"
+         "yaxis": "y2"
         },
         {
-         "hovertemplate": "Kategori=Pojkar meritvärde 16 ämnen<br>Läsår=%{x}<br>Meritvärde=%{y}<extra></extra>",
-         "legendgroup": "Pojkar meritvärde 16 ämnen",
-         "line": {
-          "color": "#00cc96",
-          "dash": "solid"
-         },
-         "marker": {
-          "symbol": "circle"
-         },
-         "mode": "lines",
-         "name": "Pojkar meritvärde 16 ämnen",
-         "orientation": "h",
-         "showlegend": true,
-         "type": "scatter",
+         "name": "Eftergymnasial",
+         "type": "bar",
          "x": [
-          2018,
-          2019,
-          2020,
-          2021,
-          2022
+          "Totalt",
+          "Flickor",
+          "Pojkar"
          ],
-         "xaxis": "x",
+         "xaxis": "x3",
          "y": [
-          209.8,
-          210.9,
-          212.9,
-          211.4,
-          211.9
+          239.1,
+          247.9,
+          230.7
          ],
-         "yaxis": "y"
+         "yaxis": "y3"
         }
        ],
        "layout": {
-        "legend": {
-         "title": {
-          "text": "Kategori"
+        "annotations": [
+         {
+          "font": {
+           "size": 16
+          },
+          "showarrow": false,
+          "text": "Förgymnasial utbildning",
+          "x": 0.14444444444444446,
+          "xanchor": "center",
+          "xref": "paper",
+          "y": 1,
+          "yanchor": "bottom",
+          "yref": "paper"
          },
-         "tracegroupgap": 0
-        },
+         {
+          "font": {
+           "size": 16
+          },
+          "showarrow": false,
+          "text": "Gymnasial utbildning",
+          "x": 0.5,
+          "xanchor": "center",
+          "xref": "paper",
+          "y": 1,
+          "yanchor": "bottom",
+          "yref": "paper"
+         },
+         {
+          "font": {
+           "size": 16
+          },
+          "showarrow": false,
+          "text": "Eftergymnasial utbildning",
+          "x": 0.8555555555555556,
+          "xanchor": "center",
+          "xref": "paper",
+          "y": 1,
+          "yanchor": "bottom",
+          "yref": "paper"
+         }
+        ],
         "template": {
          "data": {
           "bar": [
@@ -3287,23 +3282,37 @@
           }
          }
         },
-        "title": {
-         "text": "Genomsnittligt meritvärde för 16 ämnen"
-        },
         "xaxis": {
          "anchor": "y",
          "domain": [
           0,
-          1
-         ],
-         "dtick": 1,
-         "range": [
-          2018,
-          2023
+          0.2888888888888889
          ],
          "showgrid": false,
-         "title": {
-          "text": "Läsår"
+         "tickfont": {
+          "color": "#999"
+         }
+        },
+        "xaxis2": {
+         "anchor": "y2",
+         "domain": [
+          0.35555555555555557,
+          0.6444444444444445
+         ],
+         "showgrid": false,
+         "tickfont": {
+          "color": "#999"
+         }
+        },
+        "xaxis3": {
+         "anchor": "y3",
+         "domain": [
+          0.7111111111111111,
+          1
+         ],
+         "showgrid": false,
+         "tickfont": {
+          "color": "#999"
          }
         },
         "yaxis": {
@@ -3312,9 +3321,46 @@
           0,
           1
          ],
+         "range": [
+          0,
+          300
+         ],
          "showgrid": false,
+         "tickfont": {
+          "color": "#999"
+         },
          "title": {
           "text": "Meritvärde"
+         }
+        },
+        "yaxis2": {
+         "anchor": "x2",
+         "domain": [
+          0,
+          1
+         ],
+         "range": [
+          0,
+          300
+         ],
+         "showgrid": false,
+         "tickfont": {
+          "color": "#999"
+         }
+        },
+        "yaxis3": {
+         "anchor": "x3",
+         "domain": [
+          0,
+          1
+         ],
+         "range": [
+          0,
+          300
+         ],
+         "showgrid": false,
+         "tickfont": {
+          "color": "#999"
          }
         }
        }
@@ -3345,9 +3391,10 @@
     "fig_merit.update_yaxes(range=[0, 300], row=1, col=3)\n",
     "fig_merit.update_xaxes(showgrid=False)\n",
     "fig_merit.update_yaxes(showgrid=False)\n",
-    "\n",
-    "fig.write_html(\"Labb2_visualiseringar/upg1_c.html\")\n",
-    "fig.show()\n",
+    "fig_merit.update_xaxes(tickfont=dict(color=\"#999\"))\n",
+    "fig_merit.update_yaxes(tickfont=dict(color=\"#999\"))\n",
+    "fig_merit.write_html(\"Labb2_visualiseringar/upg1_c.html\")\n",
+    "fig_merit.show()\n",
     "\n",
     "\n",
     "\n",
@@ -3357,7 +3404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -4280,7 +4327,10 @@
           0,
           0.2888888888888889
          ],
-         "showgrid": false
+         "showgrid": false,
+         "tickfont": {
+          "color": "#999"
+         }
         },
         "xaxis2": {
          "anchor": "y2",
@@ -4288,7 +4338,10 @@
           0.35555555555555557,
           0.6444444444444445
          ],
-         "showgrid": false
+         "showgrid": false,
+         "tickfont": {
+          "color": "#999"
+         }
         },
         "xaxis3": {
          "anchor": "y3",
@@ -4296,7 +4349,10 @@
           0.7111111111111111,
           1
          ],
-         "showgrid": false
+         "showgrid": false,
+         "tickfont": {
+          "color": "#999"
+         }
         },
         "yaxis": {
          "anchor": "x",
@@ -4309,6 +4365,9 @@
           100
          ],
          "showgrid": false,
+         "tickfont": {
+          "color": "#999"
+         },
          "title": {
           "text": "Andel saknat betyg (%)"
          }
@@ -4323,7 +4382,10 @@
           0,
           100
          ],
-         "showgrid": false
+         "showgrid": false,
+         "tickfont": {
+          "color": "#999"
+         }
         },
         "yaxis3": {
          "anchor": "x3",
@@ -4335,7 +4397,10 @@
           0,
           100
          ],
-         "showgrid": false
+         "showgrid": false,
+         "tickfont": {
+          "color": "#999"
+         }
         }
        }
       }
@@ -4361,7 +4426,10 @@
     "fig_saknat_betyg.update_yaxes(range=[0, 100], row=1, col=3)\n",
     "fig_saknat_betyg.update_xaxes(showgrid=False)\n",
     "fig_saknat_betyg.update_yaxes(showgrid=False)\n",
+    "fig_saknat_betyg.update_xaxes(tickfont=dict(color=\"#999\"))\n",
+    "fig_saknat_betyg.update_yaxes(tickfont=dict(color=\"#999\"))\n",
     "fig_saknat_betyg.write_html(\"Labb2_visualiseringar/upg1_c1.html\")\n",
+    "\n",
     "fig_saknat_betyg.show()\n",
     "\n"
    ]
@@ -4394,7 +4462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4432,7 +4500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -5303,6 +5371,9 @@
           1
          ],
          "showgrid": false,
+         "tickfont": {
+          "color": "#999"
+         },
          "title": {
           "text": "Huvudman"
          }
@@ -5314,6 +5385,9 @@
           1
          ],
          "showgrid": false,
+         "tickfont": {
+          "color": "#999"
+         },
          "title": {
           "text": "Genomsnittlig kostnad per elev (SEK)"
          }
@@ -5335,6 +5409,10 @@
     "               labels={\"Totalt per elev\": \"Genomsnittlig kostnad per elev (SEK)\", \"Typ av huvudman\": \"Huvudman\"})\n",
     "fig1.update_xaxes(showgrid=False)\n",
     "fig1.update_yaxes(showgrid=False)\n",
+    "fig1.update_xaxes(tickfont=dict(color=\"#999\"))\n",
+    "fig1.update_yaxes(tickfont=dict(color=\"#999\"))\n",
+    "\n",
+    "\n",
     "fig1.write_html(\"Labb2_visualiseringar/upg2_first_graph.html\")\n",
     "fig1.show()\n"
    ]
@@ -5350,7 +5428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -6423,7 +6501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -7375,6 +7453,9 @@
           1
          ],
          "showgrid": false,
+         "tickfont": {
+          "color": "#999"
+         },
          "title": {
           "text": "Huvudman"
          }
@@ -7386,6 +7467,9 @@
           1
          ],
          "showgrid": false,
+         "tickfont": {
+          "color": "#999"
+         },
          "title": {
           "text": "Andel (%)"
          }
@@ -7417,6 +7501,9 @@
     ")\n",
     "fig3.update_xaxes(showgrid=False)\n",
     "fig3.update_yaxes(showgrid=False)\n",
+    "\n",
+    "fig3.update_xaxes(tickfont=dict(color=\"#999\"))\n",
+    "fig3.update_yaxes(tickfont=dict(color=\"#999\"))\n",
     "\n",
     "fig3.write_html(\"Labb2_visualiseringar/upg2_third_graph.html\")\n",
     "fig3.show()"
